<resources>
    <string name="app_name">MyTransactoins</string>
    <!-- Strings related to login -->
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">john@email.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm">Confirm</string>
    <string name="repeat_password">Repeat password</string>
    <string name="verification_code_hint">1234</string>
    <string name="title_email">Email</string>
    <string name="title_choose_password">Choose password</string>
    <string name="title_verification_code">Verification code</string>
</resources>